  -> It is recommended to set it to 'Windows Console Host'


Changelog UG-Miner 6.2.17 2024/07/13
====================================

Changes:
- ZergPool: Re-enable mining EthashB3 using SSL connection (Issue at pool is fixed)

Enhancements:
- Core: Add support for algorithms with static DAG size
- Core: Faster startup
- Core / Includes.psm1: Minor code optimizations

Fixes:
- CPU Miners broken (regression from 6.2.16)
- Core: Watchdog timeout message incorrect (regression from 6.2.5)
- Core /Includes.psm1: Function 'Get-DAGdata' returning incorrect DAG size for IRON

Fixes:
- HiveOn balances querying for unsupported BTC balance

Miner changes:
- ClaymoreDualME-v2.7.ps1 (removed - would only work with Nvidia drivers older than 20.12.1)
- OneZeroMiner-v1.3.6
- RrkzCpu-v4.2 (Invalid miner binary name)
- SRBMinerMulti-v2.5.9
- TTMiner-v2024.3.2


Changelog UG-Miner 6.2.16 2024/07/09
====================================

Enhancements:
- Core: Added configuration item 'CPUMiningReserveCPUcore' (Number of CPU cores reserved for main script processing. Helps to get more stable hashrates and faster core loop processing.)

Miner changes:
- BzMiner-v21.3.0
- Rigel-v1.18.0
- SRBMinerMulti-v2.5.8
- TTMiner-v2024.3.1


Changelog UG-Miner 6.2.15 2024/07/07
====================================

Enhancements:
- Core: Minor code optimizations
- Legacy GUI: Always select full table rows

Fixes:
- Legacy GUI: Incorrect watchdog count message when no corresponding pool watchdog exists
- Web GUI / 'Earnings and Balances': Zergpool balances wallet link incorrect


Changelog UG-Miner 6.2.14 2024/07/04
====================================

Fixes:
- Core: Double watchdog expiration messages (regression from 6.2.9)
- Core / Includes.psm1: Function 'Get-Rate' could not read cache file

Miner changes:
- JayddeeCpu-v24.4


Changelog UG-Miner 6.2.13 2024/06/30
====================================

Enhancements:
- Core: Minor code optimizations

Fixes